# checkmate-engine

./: .gitignore  Cargo.toml  LICENSE  README.md  main.py  rust_build.py  submit.py
src/: main.rs
