[package]
name = "checkmate_engine"
version = "0.1.0"
edition = "2021"

[dependencies]

[profile.release]
strip = true  # Automatically strip symbols from the binary
opt-level = "z"  # Optimize for size
lto = true # Enable link time optimization
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization
panic = "abort" # Abort on panic